tests/A2/reject/arrayReject2.ul
void main(){
    int[2] x;
    x['c'] = 2;
}